edit theme and bg

--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -33,6 +33,7 @@
 html,
 body {
   color: white;
+  background-color: #031652;
   padding: 0;
   margin: 0;
   font-family: Brand, -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
